Fix toast overflow issue

--- a/src/app/components/toast/styles.scss
+++ b/src/app/components/toast/styles.scss
@@ -5,14 +5,14 @@
   z-index: 10;
   display: flex;
   align-items: center;
-  right: 20px;
+  right: 0;
   width: 300px;
   height: 60px;
   border: 1px solid #141414;
   border-radius: 6px;
   padding: 10px;
   font-weight: 500;
-  transform: translateX(110%);
+  transform: translateX(100%);
   transition: all 0.1s ease-in-out;
 
   &--success {
